tests/golden/errors/paren_ascription.kso
fn area (w: int)
  w * w

main = print "{area 3}"
