tests/golden/errors/paren_ascription.stderr
error[formatting]: a single-type ascription is written tight: `w:type` (parenthesized guards return with typesets)
  --> paren_ascription.kso:1:11
   1 | fn area (w: int)
                 ^
